--- a/src/components/Header/Nav.css
+++ b/src/components/Header/Nav.css
@@ -22,6 +22,9 @@
 .nav .navLinks ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
 }
 
 .nav .navLinks ul li {
@@ -41,3 +44,23 @@
 .nav .navLinks ul li a:hover {
     text-decoration: underline;
 }
+
+.search {
+    display: flex;
+    align-items: center;
+  }
+  
+  .search-input {
+    padding: 5px 10px;
+    border-radius: 4px 0 0 4px;
+    border: 1px solid #ccc;
+  }
+  
+  .search-button {
+    padding: 5px 10px;
+    background-color: #555;
+    color: white;
+    border: none;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+  }
