--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,3 +8,52 @@
 .nav {
     width: 100%;
 }
+
+.nav-container {
+    width: 100%;
+    background-color: #e4002b;
+    padding: 10px 20px;
+    margin: 0 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navLinks {
+    display: flex;
+    align-items: center;
+}
+
+.navLinks a img {
+    height: 50px;
+    width: 50px;
+    margin-right: 20px;
+}
+
+.navLinks .d-flex .nav-link {
+    margin: 0 10px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    color: #FFF;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+}
+
+.search-input {
+    padding: 5px 10px;
+    border-radius: 4px 0 0 4px;
+    border: 1px solid #ccc;
+}
+
+.search-button {
+    padding: 5px 10px;
+    background-color: #555;
+    color: white;
+    border: none;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+}
