--- a/src/pages/Art/Art.css
+++ b/src/pages/Art/Art.css
@@ -1,21 +1,44 @@
-.art {
-    text-align: center;
+.art-container {
     background-color: #fff;
     min-height: 50vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     font-size: calc(10px + 2vmin);
     color: #333333;
+    padding: 0 100px;
 }
 
-.art h1 {
+.main h1 {
     font-family: Georgia,Times New Roman,Times,serif;
-    font-weight: 800;
-}
+    font-weight: 600;
+    margin: 20px 0;
+  }
 
-.art p {
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 20px;
-}
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 16px;
+    margin-top: 20px;
+  }
+  
+  .artwork {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .artwork img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+  
+  .artwork h3 {
+    margin: 10px 0 5px;
+  }
+  
+  .artwork p {
+    color: #555;
+  }
+  
