--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
-.App {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.content {
+.App {
+  min-height: 100vh;
+}
+
+.content-container {
   display: flex;
   flex: 1;
 }
