--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,24 +1,24 @@
 .main-container {
-    background-color: #fff;
-    min-height: 50vh;
-    display: flex;
-    flex-direction: column;
-    font-size: calc(10px + 2vmin);
-    color: #333333;
+  background-color: #fff;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  color: #333333;
 }
 
-.main-container h1 {
-    font-family: Georgia,Times New Roman,Times,serif;
-    font-weight: 600;
-    margin: 20px 0;
-  }
+.carousel-item img {
+  object-fit: cover;
+  width: 100%;
+  height: 80vh;
+}
 
-  .carousel-item img {
-    object-fit: cover;
-    height: 400px;
-  }
-  
-  .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.6);
-    color: white;
-  }
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+}
+
+h3 {
+  font-family: Georgia,Times New Roman,Times,serif;
+  font-weight: 600;
+}
