feat: Backend e páginas de Login e Insert

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -75,6 +75,11 @@
     border-color: #a6192e;
 }
 
+.logout-link:hover {
+    border-radius: 0;
+    border-bottom: 2px solid white;
+}
+  
 @media (max-width: 1000px) {
     .nav-container {
         margin: 0;
